added document to project 2 file

--- a/project2.html
+++ b/project2.html
@@ -1,2 +1,51 @@
-<h1>Project 2</h1>
-<a href="index.html">Home</a>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>MicrosoftOffice2016</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+	<h1>Project 2</h1>
+	<a href="index.html">Home</a>
+	<header>
+		<h1>Microsoft&reg; Office 2016</h1>
+	</header>
+	<hr>
+	<nav>
+		<a href="page1.html">Page 1</a>&nbsp;&nbsp;<a href="page2.html">Page 2</a>&nbsp;&nbsp;
+		<a href="page3.html">Page 3</a>&nbsp;&nbsp;
+	</nav>
+	<main>
+		<p>
+			<h3>Getting Started with Microsoft&reg; Office 2016</h3>
+		</p>
+		<p>This module introduces you to the most frequently used programs in Office, as well as common features they all share.</p>
+		<ol type="a">
+			<li>Understanding the Office Suite</li>
+			<li>Start an Office App</li>
+			<li>Create and Save a File</li>
+			<li>View and Print Your Work</li>
+		</ol>
+		<p>
+			<h3>Creating Documents with Word</h3>
+		</p>
+		<p>Microsoft&reg; Word is a <em>powerful</em> word processing program that allows you to create and enhance a wide range of documents
+			quickly and easily,</p>
+		<ol type="a">
+			<li>Understand Word Processing Software</li>
+			<li>Explore the Word Window</li>
+			<li>Start a Document</li>
+			<li>Save a Document</li>
+		</ol>		
+    <hr>
+	</main>
+	<footer>
+   <p><b>Illustrated Microsoft&reg; Office 2016</b>&nbsp;&nbsp;&nbsp;&nbsp;&copy;2017 Cengage Learning <br>   
+   <b>Author's:</b> <i>Beskeen/Cram/Duffy/Friedrichsen/Reding</i></p>
+   <p><a href="https://cengage.com">Visit Cengage</a></p>
+  </footer>
+</body>
+</html>
