--- a/project2.html
+++ b/project2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Project 2</h1>
-	<a href="index.html">Home</a>
+	<a href="index.html">Home page</a>
 	<header>
 		<h1>Microsoft&reg; Office 2016</h1>
 	</header>
