added my name and 2 project files as hyperlinks

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>replit</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-	<p>Hello it worked</p>
-	<ul>
-		<li><a href="project1.html">Project 1</a></li>
-		<li><a href="project2.html">Project 2</a></li>
-	</ul>
+  <h1>Patricia Baldwin</h1>
+	<ol>
+		<li><a href="unit1/index.html">Unit 1 Project</a></li>
+		<li><a href="unit2/unit2.html">Unit 2 Project</a></li>
+	</ol>
 
 </body>
 
