--- a/unit2/unit2.html
+++ b/unit2/unit2.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -8,15 +7,13 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-	<h1>Project 2</h1>
-	<a href="index.html">Home page</a>
 	<header>
 		<h1>Microsoft&reg; Office 2016</h1>
 	</header>
 	<hr>
 	<nav>
-		<a href="page1.html">Page 1</a>&nbsp;&nbsp;<a href="page2.html">Page 2</a>&nbsp;&nbsp;
-		<a href="page3.html">Page 3</a>&nbsp;&nbsp;
+		<a href="Files/Pages/page1.html">Page 1</a>&nbsp;&nbsp;<a href="Files/Pages/page2.html">Page 2</a>&nbsp;&nbsp;
+		<a href="Files/Pages/page3.html">Page 3</a>&nbsp;&nbsp;
 	</nav>
 	<main>
 		<p>
@@ -32,8 +29,7 @@
 		<p>
 			<h3>Creating Documents with Word</h3>
 		</p>
-		<p>Microsoft&reg; Word is a <em>powerful</em> word processing program that allows you to create and enhance a wide range of documents
-			quickly and easily,</p>
+		<p>Microsoft&reg; Word is a <em>powerful</em> word processing program that allows you to create and enhance a wide range of documents quickly and easily.</p>
 		<ol type="a">
 			<li>Understand Word Processing Software</li>
 			<li>Explore the Word Window</li>
