Added Unit 3 Project file

--- a/unit1/index.html
+++ b/unit1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Project 1</h1>
-	<a href="index.html">Home</a>
+	<a href="../index.html">Home</a>
 	<h1>Egg Roll Noodle Bowl</h1>
 	<hr>
 	<p><b>Prep/Total time:</b> 30 min.</p>
