--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <h1>Patricia Baldwin</h1>
 	<ol>
 		<li><a href="unit1/index.html">Unit 1 Project</a></li>
-		<li><a href="unit2/unit2.html">Unit 2 Project</a></li>
+		<li><a href="unit2/index.html">Unit 2 Project</a></li>
+    <li><a href="unit3/index.html">Unit 3 Project</a></li>
 	</ol>
 
 </body>
