--- a/unit2/index.html
+++ b/unit2/index.html
@@ -12,6 +12,7 @@
 	</header>
 	<hr>
 	<nav>
+    <a href="../index.html">Home</a>&nbsp;&nbsp;
 		<a href="Files/Pages/page1.html">Page 1</a>&nbsp;&nbsp;<a href="Files/Pages/page2.html">Page 2</a>&nbsp;&nbsp;
 		<a href="Files/Pages/page3.html">Page 3</a>&nbsp;&nbsp;
 	</nav>
