--- a/unit3/index.html
+++ b/unit3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -17,7 +17,7 @@
 			<source media="(min-width: 769px)" srcset="images/11puppies.jpeg">
 			<source media="(min-width: 426px)" srcset="images/4smalldogs.jpeg">
 			<source media="(min-width: 321px)" srcset="images/corgi.jpeg">
-			<img src="images/frenchbulldog.jpeg" alt= "dogs" style="width:200px;height:200px;">
+			<img src="images/frenchbulldog.jpeg" alt= "dogs" height="200" width="200">
     </picture>
     <hr> 
        <h3>Flowers are Beautiful</h3>
@@ -25,7 +25,7 @@
 			<source media="(min-width: 769px)" srcset="images/yellowdaisies.jpeg">
 			<source media="(min-width: 426px)" srcset="images/floralvase.jpeg">
       <source media="(min-width: 321px)" srcset="images/redroses.jpeg">
-			<img src="images/tulips.jpeg" alt= "flowers" style="width:200px;height:200px;">
+			<img src="images/tulips.jpeg" alt= "flowers" height="200" width="200">
     </picture> 
     <hr>
     <h3>Birds are Amazing</h3>
@@ -33,8 +33,8 @@
 			<source media="(min-width: 769px)" srcset="images/owls.jpeg">
 			<source media="(min-width: 426px)" srcset="images/bluejay.jpeg">
       <source media="(min-width: 321px)" srcset="images/cardinal.jpeg">
-			<img src="images/duckling.jpeg" alt= "birds" style="width:200px;height:200px;">
-    </picture>         
+			<img src="images/duckling.jpeg" alt= "birds" height="200" width="200">
+    </picture>        
     </main>
     <hr>
     <footer>
