updated images in  unit 6 project

--- a/unit6/index.html
+++ b/unit6/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main class="specialborder">
-    <img src="techphoto.jpg" class="photo specialborder">
+    <img src="techno1.jpeg" class="photo specialborder">
     
 
 	<div id="borderimg">
