added horizontal navigation bar to unit 5

--- a/unit5/index.html
+++ b/unit5/index.html
@@ -76,9 +76,8 @@
       <p>In this example, the author is equating banning Hummers with banning all cars, which is not the same thing.</p>
       <h3>Hasty Generalization</h3>
       <p>This is a conclusion based on insufficient or biased evidence. In other words, you are rushing to a conclusion before you
-        have all the relevant facts. Example: Even though it's only the first day, I can tell this is going to be a boring course.
-      </p>
-      <p>In this example, the author is basing his evaluation of the entire course on only the first day, which is notoriously boring
+        have all the relevant facts. Example: Even though it's only the first day, I can tell this is going to be a boring course.</p>
+     <p>In this example, the author is basing his evaluation of the entire course on only the first day, which is notoriously boring
         and full of housekeeping tasks for most courses. To make a fair and reasonable evaluation the author must attend not
         one but several classes, and possibly even examine the textbook, talk to the professor, or talk to others who have pviously
         finished the course in order to have sufficient evidence to base a conclusion on.</p>
@@ -168,7 +167,7 @@
     </div>
     <hr>
     <a id="U"></a>
-    <div class="itembox"><h2>Understanding Intention</h2>
+    <div class="favorite"><h2>Understanding Intention</h2>
       <h3>Always ask yourself why.</h3>
       <ul>
         <li>Think of some of your strong opinions.</li>
@@ -184,6 +183,7 @@
       <p><a href="#T">Top</a></p>
     </div>
   </main>
+    <hr>
   <footer> &copy; 2022 "Patricia Baldwin"    </footer>
   </div>
 </body>
