made changes to images on unit 6 project

--- a/unit6/index.html
+++ b/unit6/index.html
@@ -9,19 +9,21 @@
 </head>
 
 <body>
-  <main class="specialborder">
-    <img src="techno1.jpeg" class="photo specialborder">  
+  <div id="wrapper">
+  <main>    
 	<div id="borderimg">
 		<ul class="specialborder">
 			<li>This div has a background color and a border image!</li>			
 			<li>Here is the image used for the border image.</li>
       <!-- insert your img tag here -->
+      <img src="purpleborder.jpeg">
 			<li>This page has a background image.</li>
 			<li>This unordered list has images for list markers.</li>			
       <li>The image below has a border image.</li>
     </ul>
-   </div>    
-    <!-- insert your img tag here -->
+   </div> 
     </main>
-  </body>
+    <!-- insert your img tag here -->
+    <img src="techno1.jpeg" class="photo specialborder">  
+   </body>
 </html>
