added unit 9 exercise 1

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li><a href="unit6/index.html">Unit 6 Project</a></li>
     <li><a href="unit7-1/index.html">Unit 7-1 Project</a></li>
     <li><a href="unit7-2/index.html">Unit 7-2 Project</a></li>
+    <li><a href="unit9 exercise 1/index.html">Unit 9 Exercise 1</a></li>
 	</ol>
 
 </body>
