added unit 9 exercise 2

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li><a href="unit7-1/index.html">Unit 7-1 Project</a></li>
     <li><a href="unit7-2/index.html">Unit 7-2 Project</a></li>
     <li><a href="unit9 exercise 1/index.html">Unit 9 Exercise 1</a></li>
+     <li><a href="unit9 exercise 2/index.html">Unit 9 Exercise 2</a></li>
 	</ol>
 
 </body>
