added link to Unit 11 project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Patricia Baldwin</h1>
-	<ol>
+	<ul>
 		<li><a href="unit1/index.html">Unit 1 Project</a></li>
 		<li><a href="unit2/index.html">Unit 2 Project</a></li>
     <li><a href="unit3/index.html">Unit 3 Project</a></li>
@@ -20,7 +20,8 @@
     <li><a href="unit9 exercise 1/index.html">Unit 9 Exercise 1</a></li>
      <li><a href="unit9 exercise 2/index.html">Unit 9 Exercise 2</a></li>
     <li><a href="https://Unit-10-Project.pbaldwin.repl.co">Unit 10 Project</a></li>
-	</ol>
+    <li><a href="https://Unit-11-Project.pbaldwin.repl.co">Unit 11 Project</a></li>
+	</ul>
 
 </body>
 
